<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_desktop_menu"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_new"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/popWindowTextStyle"
            android:layout_alignParentLeft="true"
            android:text="@string/desktop_new" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_right" />

    </RelativeLayout>


    <View style="@style/popWindowLineStyle" />

    <TextView
        android:id="@+id/text_refresh"
        style="@style/popWindowTextStyle"
        
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/text_display_properties"
        style="@style/popWindowTextStyle"
        android:visibility="gone"
        android:text="@string/display_properties" />


    <TextView
        android:id="@+id/text_change_wallpaper"
        style="@style/popWindowTextStyle"
        android:text="@string/change_wallpaper" />


    <TextView
        android:id="@+id/text_display_settings"
        style="@style/popWindowTextStyle"
        android:text="@string/display_settings" />

    <View style="@style/popWindowLineStyle" />

    <RelativeLayout
        android:id="@+id/layout_system_theme"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/popWindowTextStyle"
            android:layout_alignParentLeft="true"
            android:text="@string/system_theme" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_view_type"
        android:layout_width="160dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/popWindowTextStyle"
            android:layout_alignParentLeft="true"
            android:text="@string/view_type" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_sort"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/popWindowTextStyle"
            android:layout_alignParentLeft="true"
            android:text="@string/sort" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_right" />

    </RelativeLayout>


    <View style="@style/popWindowLineStyle" />

    <TextView
        android:id="@+id/text_open_the_terminal"
        style="@style/popWindowTextStyle"
        android:visibility="gone"
        android:text="@string/open_the_terminal" />

</LinearLayout>